--- a/BlackTube/app/src/main/res/layout/fragment_home.xml
+++ b/BlackTube/app/src/main/res/layout/fragment_home.xml
@@ -19,13 +19,17 @@
             android:id="@+id/videoListView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            bind:setAdapter="@{viewModel.videoAdapter}"
-            bind:onScrolled="@{viewModel.isEnded}"
+            app:adapter="@{viewModel.videoAdapter}"
+            app:onScrolled="@{viewModel.isEnded}"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:listitem="@layout/item_video_list"/>
+            tools:listitem="@layout/item_video_list" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
