--- a/BlackTube/app/src/main/res/layout/activity_main.xml
+++ b/BlackTube/app/src/main/res/layout/activity_main.xml
@@ -24,9 +24,11 @@
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragmentContainerView"
-            android:name="kr.hs.dgsw.donghyeon.blacktube.view.HomeFragment"
+            android:name="kr.hs.dgsw.donghyeon.blacktube.view.fragments.HomeFragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/navigation_main"
             app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
